--- a/style.css
+++ b/style.css
@@ -34,6 +34,14 @@ body.dark-mode .maindiv{
 
 }
 
+
+body.dark-mode .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: chartreuse;
+}
+
 /* Card styles in dark mode */
 body.dark-mode .card {
     background-color: #060101; /* Dark card background */
@@ -258,6 +266,13 @@ div button:hover{
     line-height: 1.8; /* Adjust line height for readability */
     width: 100%; /* Full width text container */
     margin-top: 20px; /* Adds space above the text */
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
 }
 
 /* Card layout styles */
