--- a/style.css
+++ b/style.css
@@ -356,6 +356,7 @@ div button:hover{
 section {
 
     display: flex;
+    width: 100vw,
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
