--- a/style.css
+++ b/style.css
@@ -637,8 +637,7 @@ section {
 
 .cv-image {
     width: 500px;
-
-
+    
 }
 
 
@@ -740,7 +739,6 @@ section {
     .body-text {
         font-size: calc(1.2rem + 1vw); /* Adjust font size for body text */
         padding: 10%; /* Reduce padding */
-    }
 
 
 
@@ -786,7 +784,7 @@ section {
  
 }
 .cv-image {
-    width: 200px;
+    width: 350px;
 
 
 }
@@ -878,8 +876,14 @@ section {
             margin-bottom: 20px;           /* Add spacing below each section */
         }
 
-    .footer p(
+    .footer p{
         font-size: 1rem;
-    )
+    }
+
+    .cv-image {
+    width: 200px;
+    
+    }
+    
 
 }
